[gd_scene load_steps=2 format=3 uid="uid://caj4vm4x2p0am"]

[ext_resource type="Script" uid="uid://c52l0p0hcwbar" path="res://components/ui/cheat_panel.gd" id="1_fmce2"]

[node name="CheatPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fmce2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 654.0
offset_top = 1150.0
offset_right = 790.0
offset_bottom = 1527.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 139.0
offset_bottom = 47.0
theme_override_font_sizes/font_size = 32
text = "Cheats"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 14.0
offset_top = 54.0
offset_right = 95.0
offset_bottom = 278.0

[node name="Cheat_100_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "+100"

[node name="Cheat_500_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "+500"

[node name="Cheat_1000_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "+1k"

[node name="Cheat_10000_button" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "+10k"

[node name="PedometerPluginButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 26.0
offset_top = 302.0
offset_right = 113.0
offset_bottom = 354.0
text = "Mobile"

[connection signal="button_down" from="Panel/VBoxContainer/Cheat_100_button" to="." method="_on_cheat_100_button_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Cheat_500_button" to="." method="_on_cheat_500_button_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Cheat_1000_button" to="." method="_on_cheat_1000_button_button_down"]
[connection signal="button_down" from="Panel/VBoxContainer/Cheat_10000_button" to="." method="_on_cheat_10000_button_button_down"]
[connection signal="button_down" from="Panel/PedometerPluginButton" to="." method="_on_pedometer_plugin_button_button_down"]
